--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.0",
-    "@babel/preset-react": "^7.12.1",
-    "babel-loader": "^8.2.2",
-    "eslint": "7.18.0",
-    "eslint-config-htmlacademy": "2.1.0",
-    "eslint-plugin-react": "^7.22.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.11.0"
+    "@babel/core": "7.12",
+    "@babel/preset-env": "7.12",
+    "@babel/preset-react": "7.12",
+    "babel-loader": "8.2",
+    "eslint": "7.18",
+    "eslint-config-htmlacademy": "2.1",
+    "eslint-plugin-react": "7.22",
+    "webpack": "4.46",
+    "webpack-cli": "3.3",
+    "webpack-dev-server": "3.11"
   },
   "engines": {
     "node": ">=12.0.0"
