--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2",
     "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.9",
     "webpack": "4.46",
     "webpack-cli": "3.3",
     "webpack-dev-server": "3.11"
