--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@testing-library/react": "^11.2.5",
-    "axios-mock-adapter": "^1.19.0",
+    "@testing-library/react": "11.2.5",
+    "axios-mock-adapter": "1.19.0",
     "jest": "^26.6.3",
     "prop-types": "15.7.2",
     "react": "17.0.1",
-    "react-dom": "^17.0.1",
-    "redux-mock-store": "^1.5.4"
+    "react-dom": "17.0.1",
+    "redux-mock-store": "1.5.4"
   }
 }
